# AI-Text-Buddy-Backend

./: README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy.yml
src/: models.py  service.py
